--- a/web-client/faq.mst.html
+++ b/web-client/faq.mst.html
@@ -6,7 +6,7 @@
 	<title>name my var | faq</title>
 
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="milligram.css">
 	<link rel="stylesheet" href="common.css">
@@ -15,8 +15,8 @@
 	<link rel="stylesheet" href="faq.css">
 </head>
 <body class="block-transitions">
-	{{> header}}
-	{{> nav}}
+	{{> header.mst.html}}
+	{{> nav.mst.html}}
 
 	<main>
 		<div class="container">
