Updated href in nav links.

--- a/web-client/nav.mst.html
+++ b/web-client/nav.mst.html
@@ -7,19 +7,19 @@
 			</a>
 		</li>
 		<li>
-			<a href="index.html" class="nav-link">
+			<a href="/" class="nav-link">
 				<div class="nav-link-icon"><i class="material-icons">home</i></div>
 				<div class="nav-link-text">home</div>
 			</a>
 		</li>
 		<li>
-			<a href="faq.html" class="nav-link">
+			<a href="/faq" class="nav-link">
 				<div class="nav-link-icon"><i class="material-icons">help_outline</i></div>
 				<div class="nav-link-text">faq</div>
 			</a>
 		</li>
 		<li>
-			<a href="#" class="nav-link">
+			<a href="https://github.com/jamiesyme/name-my-var" class="nav-link">
 				<div class="nav-link-icon"><i class="material-icons">code</i></div>
 				<div class="nav-link-text">code</div>
 			</a>
