Removed specificity category link (no time to write explanations).

--- a/web-client/index.mst.html
+++ b/web-client/index.mst.html
@@ -49,11 +49,11 @@
 					</div>
 					<div class="specificity-container">
 						<h1>specificity</h1>
-						<div>
-							<a class="specificity-category" href="#"></a>
-							<span class="specificity-value"></span>
+						<p>
+							<div class="specificity-category"></div>
+							<div class="specificity-value"></div>
 							<div class="specificity-brief"></div>
-						</div>
+						</p>
 					</div>
 					<div class="examples-container">
 						<h1>examples</h1>
