--- a/web-client/index.mst.html
+++ b/web-client/index.mst.html
@@ -49,11 +49,11 @@
 					</div>
 					<div class="specificity-container">
 						<h1>specificity</h1>
-						<p>
+						<div>
 							<div class="specificity-category"></div>
 							<div class="specificity-value"></div>
 							<div class="specificity-brief"></div>
-						</p>
+						</div>
 					</div>
 					<div class="examples-container">
 						<h1>examples</h1>
