--- a/web-client/faq.mst.html
+++ b/web-client/faq.mst.html
@@ -31,7 +31,7 @@
 			<p>However, sometimes the answer isn’t as obvious, either because the obvious choice is already being used for something else, or because that name isn’t yet in your lexicon.</p>
 			<p>It’s during these cases that we suggest you pick a starting name, and use this website to explore the namespace. We hope that by providing alternatives and real-world example usages, you can settle upon a standard name, making it easier for the coders who will use and maintain your code in the future.</p>
 			<h2>how does this thing work?</h2>
-			<p>Currently, the system is only loaded with <a href="#" target="_blank">test data</a>, and contains names like “i” and “error”. However, the rest of this section describes the vision for how the system will work in the future.</p>
+			<p>Currently, the system is only loaded with <a href="https://github.com/jamiesyme/name-my-var/blob/master/api-server/test-data.json" target="_blank">test data</a>, and contains names like “i” and “error”. However, the rest of this section describes the vision for how the system will work in the future.</p>
 			<p>We use GitHub’s API to pick the most popular (most starred) repos to analyze. We currently limit our search to C++ projects, as the type system provides far more information than a dynamic language would provide. We then clone the repo and begin our analysis.</p>
 			<p>The analysis process involves combing through the source code, pulling out any information that relates names by looking at:</p>
 			<ul>
